[FIX] A problem with images non visible.

--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -97,6 +97,7 @@ h3 {
         display: flex;
         justify-content: flex-start;
         overflow-x: auto;
+        overflow-y: hidden;
         padding-top: 14px;
         & li {
             display: block;
